Fix composer schema
After some research I can't do composer install, check schema then got this solution key "name" into "title".

--- a/backend/composer.json
+++ b/backend/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "BEON Test",
+    "title": "BEON Test",
     "type": "project",
     "description": "Build for skill fit test.",
     "keywords": ["framework", "laravel", "test", "work"],
